--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Luna Run
 SEOTitle: LunaRun的博客 | LunaRun Blog
-header-img: img/home-bg.jpg
+header-img: img/luna-post-bg.jpg
 email: 706827455@qq.com
 description: "关于前端与设计、旅行和美食 | LunaRun，Web & Mobile Lover，Front-End Engineer，Foodie | 这里是 @lunarun LunaRun 的个人博客，来一起向前吧。"
 keyword: "luna, lunarun, LunaRun, LunaRun的博客, LunaRun Blog, 博客, 个人网站, 互联网, 前端, 旅行, 美食"
@@ -71,7 +71,7 @@ ga_domain: lunarun.github.io
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
 sidebar-about-description: "写写代码，做做美食，看看世界。"
-sidebar-avatar: /img/avatar-hux.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
+# sidebar-avatar: /img/avatar-hux.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
 
@@ -84,35 +84,11 @@ featured-condition-size: 1              # A tag will be featured if the size of 
 # Friends
 friends: [
     {
-        title: "Su",
-        href: "http://su.gallery/"
-    },{
         title: "乱序",
         href: "http://mida.re/"
     },{
         title: "前端外刊评论",
         href: "http://qianduan.guru/"
-    },{
-        title: "天镶的博客",
-        href: "http://lingyu.wang/"
-    },{
-        title: "Luke 的自留地",
-        href: "http://hmqk1995.github.io"
-    },{
-        title: "Ebn's Blog",
-        href: "http://ebnbin.com/"
-    },{
-        title: "SmdCn's Blog",
-        href: "http://blog.smdcn.net"
-    },{
-        title: "解旻的博客",
-        href: "http://xieminis.me/"
-    },{
-        title: "DHong Say",
-        href: "http://dhong.co"
-    },{
-        title: "尹峰以为",
-        href: "http://ingf.github.io/"
     },{
         title: "前端神盾局",
         href: "http://wepiaofei.github.io/blog/"
